change dirs, fix mongo for auth app

--- a/auth/package.json
+++ b/auth/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "users",
+  "name": "auth",
   "version": "1.0.0",
-  "description": "Starter pack for an auth-included graphql project",
+  "description": "An auth-included graphql project",
   "repository": {
     "type": "git",
-    "url": "github.com/stephengrider"
+    "url": "https://github.com/tomryb/graphql-with-react"
   },
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "connect-mongo": "^1.3.2",
+    "dotenv": "^10.0.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "express-session": "^1.15.0",
@@ -29,7 +30,7 @@
     "graphql-tag": "^1.2.4",
     "html-webpack-plugin": "^2.26.0",
     "lodash": "^4.17.4",
-    "mongoose": "^4.7.8",
+    "mongoose": "^5.13.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
